[package]
name = "pair"
version = "0.1.0"
edition = "2021"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
snafu = { version = "0.6.3" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.7"

cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
secret-toolkit = "0.2"

common = { path = "../../libraries/common" }

[dev-dependencies]
cosmwasm-schema = "0.10.1"
