[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
snafu = { version = "0.6.3" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.7"

cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
secret-toolkit = "0.2"
